# devcli

./: Justfile  LICENSE  README.md  README.rst  TODO.taskpaper  devcli  pyproject.toml
.devcli/: README.rst  example.py  template.py
conf/: README  cmdmap  defaults.toml  devcli.toml
conf/ci/: jenkins_conf  jenkins_jobs
conf/twin/: config
conf/url/: list
devcli/: __init__.py  basic.py  cli.py  cmd.py  config.py  io.py  shell.py  utils.py
devcli.d/: _cli_checks  _empty  _environment  _file_manifest  _git  _jenkins  _keychain  _linux_date  _macos_date  _ngrok  _password-store  _rsasecurid  _secret-keys  _secrets  _vagrant  _vpn  ci  create  date  docs  mit-license  pass  share  template  twin  url  vcs  vpn
devcli/command/: ci.py  op.py
devcli/sh/: base.py  executable.py  fs.py  one_password.py
tests/: test_cli.py  test_conf.py  test_io.py
tests/fixtures/: general.toml  specific.toml
