[tool.poetry]
name = "devcli"
version = "0.2.0"
description = "A general developer command line tool"
authors = ["Marco Valtas <mavcunha@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.12"
toml = "^0.10.2"
click = "^8.1.7"
mock = "^5.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
devcli = "devcli.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
