[tool.poetry]
name = "devcli"
version = "0.2.0"
description = "A command line tool to create command line tools"
authors = ["Marco Valtas"]
license = "MIT"
readme = "README.rst"
include = ["conf/**/*", "pyproject.toml"]

[tool.poetry.dependencies]
python = "^3.12"
toml = "^0.10.2"
mock = "^5.1.0"
typer = "^0.9.0"
rich = "^13.7.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
devcli = "devcli.cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
